--- a/OrderFood_SW/OrderFood_SW.csproj
+++ b/OrderFood_SW/OrderFood_SW.csproj
@@ -6090,6 +6090,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+    <PackageReference Include="Optivem.Framework.Infrastructure.FluentValidation" Version="1.0.23" />
   </ItemGroup>
 
   <ItemGroup>
