recreate UI/UX Customer: Order, Cart, History, Table view and all func in it. create Login, role, attach tag to controller. refactor all css and js file each page of customer.

--- a/OrderFood_SW/OrderFood_SW.csproj
+++ b/OrderFood_SW/OrderFood_SW.csproj
@@ -6094,6 +6094,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\js\customer-script\" />
     <Folder Include="wwwroot\lib\bootstrap\" />
     <Folder Include="wwwroot\lib\bootstrap\dist\js\" />
     <Folder Include="wwwroot\lib\jquery-validation-unobtrusive\" />
