--- a/OrderFood_SW/OrderFood_SW.csproj
+++ b/OrderFood_SW/OrderFood_SW.csproj
@@ -6094,6 +6094,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\images\Sites\" />
+    <Folder Include="wwwroot\images\Users\" />
     <Folder Include="wwwroot\js\customer-script\" />
     <Folder Include="wwwroot\lib\bootstrap\" />
     <Folder Include="wwwroot\lib\bootstrap\dist\js\" />
